<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_borrow"
            android:icon="@drawable/ic_menu_borrow"
            android:title="@string/borrow" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_menu_save"
            android:title="@string/save" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send" />
        <item
            android:id="@+id/nav_withdraw"
            android:icon="@drawable/ic_menu_withdraw"
            android:title="@string/withdraw" />
    </group>

        <group android:checkableBehavior="none">
            <item android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_action_about"
                android:title="@string/nav_about_us"/>
        </group>



</menu>
