<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map_toggle"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_map_toggle"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list_toggle"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_list"
        android:title="@string/action_list_toggle"
        android:visible="false"
        app:showAsAction="always" />
</menu>
