<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.hot.sentefinder.activities.ReviewActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp">

        <RelativeLayout
            android:id="@+id/fsp_review_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_question"/>

            <RatingBar
                android:id="@+id/fsp_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:progressTint="@color/colorAccent"
                android:stepSize="1" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fsp_review_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fsp_review_question"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fsp_comment_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments" />

            <EditText
                android:id="@+id/fsp_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fsp_comment_label" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fsp_review_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fsp_review_comment"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/fsp_review_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:text="@string/review_submit"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
