<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.hot.sentefinder.activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/service_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="loadBorrowFragment"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/borrow_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_action_borrow"/>

                        <TextView
                            android:id="@+id/boroow_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/borrow_img"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/borrow"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="loadSaveFragment"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/save_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_action_save"/>

                        <TextView
                            android:id="@+id/save_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/save_img"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/save"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="loadSendFragment"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/send_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_action_send"/>

                        <TextView
                            android:id="@+id/send_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/send_img"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/send"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="loadWithdrawFragment"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/withdraw_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_action_withdraw"/>

                        <TextView
                            android:id="@+id/withdraw_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/withdraw_img"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/withdraw"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
